styles/main.css
/* ... */
.container {
    width: 100%;
    max-width: 1140px;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

.container--inner {
    max-width: 1470px;
    width: 100%;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

.container-fluid {
    width: 100%;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

.d-hide {
    visibility: hidden;
}

.d-none {
    display: none !important;
}

h1,
h2,
h3,
h4,
h5,
h6,
ul {
    margin: 0;
    padding: 0;
}

h1,
h2 {
    color: #ffffff;
    font-weight: 900;
    font-size: 50px;
    line-height: 53px;
}

h3 {
    font-weight: 900;
    font-size: 30px;
    line-height: 40px;
    color: #ffffff;
}

h4 {
    font-size: 22px;
    line-height: 32px;
    color: #ffffff;
    font-weight: 400;
}

.orange {
    color: #ffd788;
}

.gray {
    color: rgba(207, 207, 221, 0.4);
}

.white {
    color: #ffffff;
}

.overflow {
    overflow: hidden;
}

.header {
    position: relative;
    height: 100vh;
    background-image: url("../img/main/main-bg.jpg");
    background-size: cover;
    background-position: center;
}

.header__intro {
    position: absolute;
    top: 33%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.header__arrow-down {
    position: absolute;
    bottom: 15%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 0.1;
    animation-name: anima-angle;
    animation-duration: 1.5s;
    animation-iteration-count: infinite;
    animation-direction: alternate-reverse;
}

@keyframes anima-angle {
    0% {
        transform: translateY(0);
    }

    100% {
        transform: translateY(-10px);
    }
}

div.burger {
    display: none;
    height: 40px;
    width: 40px;
    position: relative;
    z-index: 9999;
    cursor: pointer;
    top: -10px;
}

div.circle {
    border-radius: 50%;
    width: 0px;
    height: 0px;
    position: absolute;
    top: 50px;
    left: 40px;
    background: #040306;
    opacity: 1;
    -webkit-transition: all 300ms cubic-bezier(0, 0.995, 0.99, 1);
    -moz-transition: all 300ms cubic-bezier(0, 0.995, 0.99, 1);
    -ms-transition: all 300ms cubic-bezier(0, 0.995, 0.99, 1);
    -o-transition: all 300ms cubic-bezier(0, 0.995, 0.99, 1);
    transition: all 300ms cubic-bezier(0, 0.995, 0.99, 1);
}

div.circle.expand {
    width: 1600px;
    height: 1600px;
    top: -560px;
    left: -565px;
    -webkit-transition: all 400ms cubic-bezier(0, 0.995, 0.99, 1);
    -moz-transition: all 400ms cubic-bezier(0, 0.995, 0.99, 1);
    -ms-transition: all 400ms cubic-bezier(0, 0.995, 0.99, 1);
    -o-transition: all 400ms cubic-bezier(0, 0.995, 0.99, 1);
    transition: all 400ms cubic-bezier(0, 0.995, 0.99, 1);
    z-index: 99;
}

div.menu {
    height: 568px;
    width: 320px;
    position: absolute;
    top: 0px;
    left: 0px;
    z-index: 999;
    visibility: hidden;
}

div.menu {
    height: 568px;
    width: 320px;
    position: absolute;
    top: 0px;
    left: 0px;
    z-index: 999;
    visibility: hidden;
}

div.menu ul li {
    list-style: none;
    position: absolute;
    top: 50px;
    left: 0;
    opacity: 0;
    width: 320px;
    text-align: center;
    font-size: 0px;
    -webkit-transition: all 70ms cubic-bezier(0, 0.995, 0.99, 1);
    -moz-transition: all 70ms cubic-bezier(0, 0.995, 0.99, 1);
    -ms-transition: all 70ms cubic-bezier(0, 0.995, 0.99, 1);
    -o-transition: all 70ms cubic-bezier(0, 0.995, 0.99, 1);
    transition: all 70ms cubic-bezier(0, 0.995, 0.99, 1);
}

div.menu li.animate {
    font-size: 21px;
    opacity: 1;
    -webkit-transition: all 150ms cubic-bezier(0, 0.995, 0.99, 1);
    -moz-transition: all 150ms cubic-bezier(0, 0.995, 0.99, 1);
    -ms-transition: all 150ms cubic-bezier(0, 0.995, 0.99, 1);
    -o-transition: all 150ms cubic-bezier(0, 0.995, 0.99, 1);
    transition: all 150ms cubic-bezier(0, 0.995, 0.99, 1);
}

div.menu li.animate:nth-of-type(1) {
    top: 120px;
    transition-delay: 0s;
}

div.menu li.animate:nth-of-type(2) {
    top: 190px;
    transition-delay: 0.03s;
}

div.menu li.animate:nth-of-type(3) {
    top: 260px;
    transition-delay: 0.06s;
}

div.menu li.animate:nth-of-type(4) {
    top: 330px;
    transition-delay: 0.09s;
}

div.menu li.animate:nth-of-type(5) {
    top: 430px;
    transition-delay: 0.12s;
}

div.menu li.animate:nth-of-type(6) {
    top: 500px;
    transition-delay: 0.15s;
}

.footer {
    padding-top: 20px;
    padding-bottom: 60px;
}

.footer__wrap {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
}

.footer__left {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
}

.footer__right {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
}

.footer__logo {
    margin-right: 110px;
}

.footer__logo-copy {
    font-size: 14px;
    line-height: 27px;
    color: rgba(207, 207, 221, 0.4);
    padding-left: 44px;
}

.footer__nav {
    display: flex;
    margin-right: 60px;
}

.footer__nav-list {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.footer__nav-item {
    margin-bottom: 12px;
    min-width: 135px;
}

.footer__nav-link {
    font-weight: 500;
    font-size: 12px;
    line-height: 24px;
    text-transform: uppercase;
    text-decoration: none;
    color: rgba(255, 255, 255, 0.4);
    transition: all 0.2s ease-in-out;
}

.footer__nav-link:hover {
    opacity: 0.7;
}

.footer__social {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    width: 100%;
    max-width: 390px;
    margin-right: 100px;
}

.footer__social-link {
    display: block;
    height: 20px;
    margin-right: 65px;
    margin-bottom: 32px;
    transition: all 0.3s ease-in-out;
}

.footer__social-link:hover {
    opacity: 0.7;
}
/* ... */

